# RGBD-Mapping

./: CMakeLists.txt
SampleObjects/: Depths.txt
corelib/include/rtabmap/core/odometry/: OdometryF2M.h
corelib/src/: CMakeLists.txt  Odometry.cpp  Registration.cpp
corelib/src/camera/: CameraFreenect.cpp
corelib/src/odometry/: ObjectDetect.cpp  ObjectDetect.h  OdometryF2M.cpp
examples/: CMakeLists.txt
examples/NoEventsExample/: main.cpp
examples/RGBDMapping/: main.cpp
examples/RGBDMapping_Capture_3D_Point_Cloud/: CMakeLists.txt  main.cpp
examples/RGBDMapping_FakeNect/: CMakeLists.txt  main.cpp
examples/RGBDMapping_NoEvents/: CMakeLists.txt  main.cpp
intergration/: printInformation.c  printiIformation.h
